--- a/src/dotnet/Chat.UI.Blazor/Components/components.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/components.css
@@ -170,8 +170,14 @@ body.hoverable .btn-square.add-user-btn:hover .btn-content {
 }
 
 .message-counter-with-time {
-    @apply flex-y items-end gap-y-0.5;
+    @apply flex-y items-center gap-y-0.5;
     @apply group-hover:hidden;
+}
+.message-counter-with-time .last-entry-time {
+    @apply mr-1;
+}
+.message-counter-with-time .counter-badge-incut {
+    @apply h-4.5;
 }
 
 .chat-not-found-container {
